--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,8 @@
 <body>
     <div class="main-content">
     {{>header}}
-    <img class="portrait" src="/img/me.jpg">
+    <p>This site was created by Tosin. It uses data from mapbook.com and openweather.net!</p>
+    <img class="portrait" src="/img/dark.jpg">
     </div>
 
     {{>footer}}
