--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,3 +1,5 @@
 <footer>
-    <p>Created by {{name}}</p>
+    <p>
+        Created by <a href="https://www.twitter.com/t0sin0j0"><b>{{name}}</b></a>
+    </p>
 </footer>
