--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,12 +9,21 @@
 </head>
 
 <body>
+    <style>
+        p {
+            text-align: justify;
+            width: 310px;
+            line-height: 1.7rem;
+        }
+    </style>
     <div class="main-content">
     {{>header}}
-    <p>This site was created by Tosin. It uses data from mapbook.com and openweather.net!</p>
+    <p>This site was created by Tosin. It uses data from mapbook.com and openweather.net!
+        It provides you with your location's current weather forecast.
+    </p>
     <img class="portrait" src="/img/dark.jpg">
     </div>
-
+    
     {{>footer}}
 </body>
     
