--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    <style>
+        p {
+            text-align: justify;
+            width: 310px;
+            line-height: 1.7rem;
+        }
+    </style>
     <div class="main-content">
         {{>header}}
 
@@ -19,10 +26,10 @@
             <button>Search</button>
         </form>
 
-        <p id="message-1"></p>
+        <p id="message-1" style="font-weight: bold;"></p>
         <P id="message-2"></P>
+        <p id="message-3"></p>
     </div>
-
 
     {{>footer}}
     
