corrected about message

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -19,7 +19,7 @@
     <div class="main-content">
     {{>header}}
     <p>This site was created by Tosin. It uses data from mapbook.com and openweather.net!
-        It provides you with your location's current weather forecast.
+        It provides you with locations' current weather forecast.
     </p>
     <img class="portrait" src="/img/dark.jpg">
     </div>
