--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,7 +1,8 @@
 <header>
     <h1>{{title}}</h1>
-
-    <a href="/">Weather</a>
-    <a href="/about">About</a>
-    <a href="/help">Help</a>
+    <nav>
+        <a href="/">Weather</a>
+        <a href="/about">About</a>
+        <a href="/help">Help</a>
+    </nav>
 </header>
