--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,8 +1,8 @@
 <header>
-    <h1>{{title}}</h1>
+    <h1 style="text-align:center;">{{title}}</h1>
     <nav>
         <a href="/">Weather</a>
-        <a href="/about">About</a>
-        <a href="/help">Help</a>
+        <a href="/about" style="width:80%">About</a>
+        <a href="/help" style="border-right:none;margin-left:-10px;">Help</a>
     </nav>
 </header>
