--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,11 +13,22 @@ body {
     align-items: center;
     display: flex;
     flex-direction: column;
-    min-height: 98vh;
+    min-height: 90vh;
 }
 
 nav {
-    padding-left: 33px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-left: 15px;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+}
+
+nav a {
+    border-right: 1px solid #cccccc;
+    width: 100%;
+    padding-left: 16px;
 }
 
 .main-content {
@@ -55,6 +66,7 @@ footer a {
 .portrait {
     width: 250px;
     height: 300px;
+    margin: 20px;
 }
 
 input {
@@ -74,6 +86,7 @@ button {
 
 ul {
     line-height: 1.5rem;
+    margin-left: 25px;
 }
 
 .contact {
