Avoiding global modules

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -19,8 +19,8 @@
     </style>
     <div class="main-content">
     {{>header}}
-    <p>This site was created by Tosin. It uses data from mapbook.com and openweather.net!
-        It provides you with locations' current weather forecast.
+    <p>This site was created by Tosin. It uses data from mapbook.com and openweather.net,
+        to provide you with locations' current weather report.
     </p>
     <img class="portrait" src="/img/dark.jpg">
     </div>
