--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -21,10 +21,10 @@
         {{>header}}
         <p>{{helpText}}</p>
         <ul>
-            <li>Input the location of interest into the text box</li>
-            <li>Provide detailed location to increase precision</li>
-            <li>Click the search button</li>
-            <li>Get your forecast</li>
+            <li>Input the location of interest into the text box,</li>
+            <li>Provide detailed location to increase precision,</li>
+            <li>Click the search button,</li>
+            <li>Get your report.</li>
         </ul>
     </div>
 
