--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -20,7 +20,7 @@
     <div class="main-content">
         {{>header}}
 
-        <p>Use this site to get your weather</p>
+        <p style="text-align:center;">Use this site to get your weather report</p>
 
         <form>
             <input placeholder="Location">
@@ -28,7 +28,7 @@
         </form>
 
         <p id="message-1" style="font-weight: bold;"></p>
-        <P id="message-2"></P>
+        <P id="message-2"></P><br>
         <p id="message-3"></p>
     </div>
 
