--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,7 +19,7 @@ body {
 nav {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    margin-left: 15px;
+    margin-left: 25px;
     width: 100%;
     height: 40px;
     line-height: 40px;
@@ -69,11 +69,16 @@ footer a {
     margin: 20px;
 }
 
+form {
+    width: 100%
+}
+
 input {
     border: 1px solid #cccccc;
     padding: 8px;
     margin-bottom: 15px;
     margin-top: 18px;
+    width: 79%;
 }
 
 button {
