--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,5 +1,11 @@
 <footer>
-    <p>
-        Created by <a href="https://www.twitter.com/t0sin0j0"><b>{{name}}</b></a>
-    </p>
+    <a href="https://www.twitter.com/t0sin0j0">
+        <img src="https://pngimg.com/uploads/twitter/small/twitter_PNG1.png" alt="" />
+    </a>
+    <a href="https://github.com/Tosin-Ojo">
+        <img src="https://freepngimg.com/thumb/github/1-2-github-free-png-image-thumb.png" alt="" />
+    </a>
+    <a href="https://www.linkedin.com/in/oluwatosin-adebayo-5b34831a6/">
+        <img src="https://freepngimg.com/thumb/linkedin/9-2-linkedin-free-download-png-thumb.png" alt="" />
+    </a>
 </footer>
