--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,8 +1,12 @@
 <header>
-    <h1 style="text-align:center;">{{title}}</h1>
+    <h1 style="text-align:center;">
+        <img src="https://freepngimg.com/thumb/categories/2275.png" alt="" />
+        {{title}}
+    </h1>
+    <h4>Be dry today get your weather forecast</h4>
     <nav>
-        <a href="/">Weather</a>
-        <a href="/about" style="width:80%">About</a>
-        <a href="/help" style="border-right:none;margin-left:-10px;">Help</a>
+        <a href="/">Forecast</a>
+        <a href="/about">Contact Me</a>
+        <a href="/help">Help</a>
     </nav>
 </header>
