--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -5,27 +5,25 @@
 <head>
     <title>About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/img/weather.png">
+    <link rel="icon" href="https://freepngimg.com/thumb/categories/2275.png">
     <link rel="stylesheet" href="/css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="goldenrod" />
 </head>
 
 <body>
-    <style>
-        p {
-            text-align: justify;
-            width: 310px;
-            line-height: 1.7rem;
-        }
-    </style>
     <div class="main-content">
-    {{>header}}
-    <p>This site was created by Tosin. It uses data from mapbook.com and openweather.net,
-        to provide you with locations' current weather report.
-    </p>
-    <img class="portrait" src="/img/dark.jpg">
+        {{>header}}
+        <p>
+            Hello, my name is <b>Tosin</b> a <b>Fullstack Developer</b>.
+        </p>
+        <p>
+            You want us to talk? Awesome! You can reach me on those platforms before, let's create magic! Smile.
+        </p>
+        <img class="portrait" src="/img/dark.jpg">
     </div>
-    
+
     {{>footer}}
 </body>
-    
+
 </html>
