--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -5,13 +5,16 @@
 <head>
     <title>Help</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/img/weather.png">
+    <link rel="icon" href="https://freepngimg.com/thumb/categories/2275.png">
     <link rel="stylesheet" href="/css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="goldenrod" />
 </head>
 
 <body>
     <style>
-        p, ul {
+        p,
+        ul {
             text-align: justify;
             width: 310px;
             line-height: 1.7rem;
@@ -19,13 +22,11 @@
     </style>
     <div class="main-content">
         {{>header}}
-        <p>{{helpText}}</p>
-        <ul>
-            <li>Input the location of interest into the text box,</li>
-            <li>Provide detailed location to increase precision,</li>
-            <li>Click the search button,</li>
-            <li>Get your report.</li>
-        </ul>
+        <p>
+            To use this app, just input the location you are interested in the weather forecast, and Voila! You get your
+            forecast.
+        </p>
+        <p>Easy right? Smile, I know.</p>
     </div>
 
     {{>footer}}
