--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -3,7 +3,7 @@
         <img src="https://freepngimg.com/thumb/categories/2275.png" alt="" />
         {{title}}
     </h1>
-    <h4>Be dry today get your weather forecast</h4>
+    <h4>Be dry today, get your weather forecast now.</h4>
     <nav>
         <a href="/">Forecast</a>
         <a href="/about">Contact Me</a>
