--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -5,17 +5,19 @@
 <head>
     <title>404</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/img/weather.png">
+    <link rel="icon" href="https://freepngimg.com/thumb/categories/2275.png">
     <link rel="stylesheet" href="/css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="goldenrod" />
 </head>
 
 <body>
     <div class='main-content'>
         {{>header}}
-        <p>{{errorMessage}}</p>
+        <h2 class="404">{{errorMessage}}</h2>
     </div>
 
     {{>footer}}
 </body>
-    
+
 </html>
