--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -18,7 +18,7 @@
             Hello, my name is <b>Tosin</b> a <b>Fullstack Developer</b>.
         </p>
         <p>
-            You want us to talk? Awesome! You can reach me on those platforms before, let's create magic! Smile.
+            You want us to talk? Awesome! You can reach me on those platforms below, let's create magic together! Smile.
         </p>
         <img class="portrait" src="/img/dark.jpg">
     </div>
