--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://freepngimg.com/thumb/categories/2275.png">
     <link rel="stylesheet" href="/css/styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="goldenrod" />
+    <meta name="theme-color" content="#e5a43c" />
 </head>
 
 <body>
