--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -5,7 +5,7 @@
     <a href="https://github.com/Tosin-Ojo">
         <img src="https://freepngimg.com/thumb/github/1-2-github-free-png-image-thumb.png" alt="" />
     </a>
-    <a href="https://www.linkedin.com/in/oluwatosin-adebayo-5b34831a6/">
+    <a href="https://www.linkedin.com/in/t0sin0j0/">
         <img src="https://freepngimg.com/thumb/linkedin/9-2-linkedin-free-download-png-thumb.png" alt="" />
     </a>
 </footer>
